--- a/data/theme.toml
+++ b/data/theme.toml
@@ -5,8 +5,10 @@ facebook = "https://facebook.com/"
 github = "https://github.com/"
 gitlab = "https://gitlab.com/"
 instagram = "https://instagram.com/"
-linkedin = "https://linkedin.com/in/"
+linkedin = "https://www.linkedin.com/company/"
 twitter = "https://twitter.com/"
 telegram = "https://t.me/"
+reddit = "https://www.reddit.com/r/"
+google_plus = "https://plus.google.com/"
 google_scholar = "https://scholar.google.com/citations?user="
 youtube = "https://www.youtube.com/channel/"
